docs: Documentação da controller de todo
