# internal/todo/controller/controller.go
@@ -12,27 +12,56 @@ type TodoController struct {
 	todoService service.TodoService
 }
 
+type response struct {
+	Message string `json:"message" example:"Message"`
+	Error   string `json:"error" example:"Error message"`
+}
+
 func NewTodoController(todoService service.TodoService) *TodoController {
 	return &TodoController{
 		todoService: todoService,
 	}
 }
 
+// List todos
+//
+//	@Summary	Lista os todos
+//	@Schemes
+//	@Description	Listagem de todos cadatrados
+//	@Tags			todo
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	[]domain.Todo
+//	@failure		401	{string}	string	"Token inválido"
+//	@Router			/todo [get]
 func (tc *TodoController) ListTodoHandler(context *gin.Context) {
 	todos := tc.todoService.ListTodo()
 
 	context.JSON(http.StatusOK, todos)
 }
 
+// Create new todo
+//
+//	@Sumary	Criar novo todo
+//	@Schemes
+//	@Description	Criar novo todo
+//	@Tags			todo
+//	@Accept			json
+//	@Produce		json
+//	@Success		200		{object}	domain.Todo
+//	@failure		401		{object}	controller.response	"Token inválido"
+//	@failure		400		{object}	controller.response	"Request inválido"
+//	@failure		500		{object}	controller.response	"Erro interno do servidor"
+//	@Router			/todo	[post]
 func (tc *TodoController) CreateTodoHandler(context *gin.Context) {
 	var todo domain.Todo
 
 	bindErr := context.ShouldBind(&todo)
 
 	if bindErr != nil {
-		context.JSON(http.StatusBadRequest, gin.H{
-			"message": "Invalid parameters",
-			"error":   bindErr.Error(),
+		context.JSON(http.StatusBadRequest, response{
+			Message: "Invalid parameters",
+			Error:   bindErr.Error(),
 		})
 		return
 	}
@@ -40,8 +69,8 @@ func (tc *TodoController) CreateTodoHandler(context *gin.Context) {
 	savedTodo, insertErr := tc.todoService.InserTodo(&todo)
 
 	if insertErr != nil {
-		context.JSON(http.StatusInternalServerError, gin.H{
-			"error": insertErr.Error(),
+		context.JSON(http.StatusInternalServerError, response{
+			Error: insertErr.Error(),
 		})
 		return
 	}
@@ -49,6 +78,19 @@ func (tc *TodoController) CreateTodoHandler(context *gin.Context) {
 	context.JSON(http.StatusCreated, savedTodo)
 }
 
+// Update todo
+//
+//	@Sumary	Atualizar todo
+//	@Schemes
+//	@Description	Atualizar um todo existente
+//	@Tags			todo
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		string				true	"Identificador do todo"
+//	@Success		200	{object}	controller.response	"Atualizado com sucesso"
+//	@failure		400	{object}	controller.response	"Payload inválido"
+//	@failure		500	{object}	controller.response	"Erro interno do servidor"
+//	@Router			/todo/{id} [put]
 func (tc *TodoController) UpdateTodoHandler(context *gin.Context) {
 	id := context.Param("id")
 
@@ -56,9 +98,9 @@ func (tc *TodoController) UpdateTodoHandler(context *gin.Context) {
 	bindErr := context.ShouldBind(&todo)
 
 	if bindErr != nil {
-		context.JSON(http.StatusBadRequest, gin.H{
-			"message": "Invalid parameters",
-			"error":   bindErr.Error(),
+		context.JSON(http.StatusBadRequest, response{
+			Message: "Invalid parameters",
+			Error:   bindErr.Error(),
 		})
 		return
 	}
@@ -68,31 +110,43 @@ func (tc *TodoController) UpdateTodoHandler(context *gin.Context) {
 	_, updateErr := tc.todoService.UpdateTodo(id, &todo)
 
 	if updateErr != nil {
-		context.JSON(http.StatusInternalServerError, gin.H{
-			"error": updateErr.Error(),
+		context.JSON(http.StatusInternalServerError, response{
+			Error: updateErr.Error(),
 		})
 		return
 	}
 
-	context.JSON(http.StatusOK, gin.H{
-		"message": "Updated todo",
+	context.JSON(http.StatusOK, response{
+		Message: "Updated todo",
 	})
 }
 
+// Delete todo
+//
+//	@Sumary	Delete todo
+//	@Schemes
+//	@Description	Apaga um todo pelo identificado
+//	@Tags			todo
+//	@Accept			json
+//	@Produce		json
+//	@Param			id			path		string	true	"Identificado único do todo"
+//	@Success		200			{object}	controller.response
+//	@failure		500			{object}	controller.response	"Erro interno do servidor"
+//	@Router			/todo/{id}	[delete]
 func (tc *TodoController) DeleteTodoHandler(context *gin.Context) {
 	id := context.Param("id")
 
 	err := tc.todoService.DeleteTodo(id)
 
 	if err != nil {
-		context.JSON(http.StatusInternalServerError, gin.H{
-			"message": "There are a error on delete todo",
-			"error":   err.Error(),
+		context.JSON(http.StatusInternalServerError, response{
+			Message: "There are a error on delete todo",
+			Error:   err.Error(),
 		})
 		return
 	}
 
-	context.JSON(http.StatusOK, gin.H{
-		"message": "Todo deleted with success",
+	context.JSON(http.StatusOK, response{
+		Message: "Todo deleted with success",
 	})
 }
